Issue 164: Cropped the logo's to make some more space and to beable to control the spacing to a greater degree. Issue 169: Changed the search form title to 'Enter your search terms'. Issue 179: Changed download links in digital catalogue to behave inline, rather than blocks.

--- a/modules/viewer/less/_image.less
+++ b/modules/viewer/less/_image.less
@@ -26,6 +26,7 @@
       button {
         padding: 2px 12px;
         border-radius: 7px;
+        font-size: 14px;
       }
     }
     a.button,
@@ -34,6 +35,9 @@
       color: black;
       cursor: pointer;
       text-decoration: none;
+    }
+    .dropdown-menu {
+      font-size: 14px;
     }
     .download {
       // Not enough room for the download icon.
