--- a/modules/viewer/less/_toolbar.less
+++ b/modules/viewer/less/_toolbar.less
@@ -60,6 +60,7 @@
       width: 80%;
     }
     button {
+      font-size: 14px;
       padding: 2px 12px;
       border-radius: 7px;
     }
