--- a/modules/viewer/less/livingstone-manuscript-viewer.less
+++ b/modules/viewer/less/livingstone-manuscript-viewer.less
@@ -16,4 +16,5 @@ body {
   height: 100%;
   width: 100vw;
   position: fixed;
+  font-size: 14px;
 }
